--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ajv-keywords": "^3.5.2",
     "escape-string-regexp": "^1.0.5",
     "google-maps-react": "^2.0.2",
+    "object-path": "^0.11.5",
     "react": "^16.4.1",
     "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^0.32.1",
